samples/_failures_safe/1761152330_5da24e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ff9d7181.c: In function ‘main’:
./samples/SAFE/__tmp_ff9d7181.c:155:12: error: missing terminating " character
  155 |     printf("Graph
      |            ^~~~~~
./samples/SAFE/__tmp_ff9d7181.c:155:5: error: expected expression at end of input
  155 |     printf("Graph
      |     ^~~~~~
./samples/SAFE/__tmp_ff9d7181.c:155:5: error: expected declaration or statement at end of input
